--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Islands -- Sweden -- Fiction'
 - !lcc 'PT'
 - !lcsh 'Farm life -- Sweden -- Fiction'
+- GITenberg
 title: Hemsöborna
 url: http://www.gutenberg.org/ebooks/30078
